create EventHandler for handling Kafka messages in background